--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;700&family=Montserrat:wght@500&display=swap"
       rel="stylesheet">
-    <title>Be a Pilot</title>
+    <title>Test Pilot Pro</title>
   </head>
   <body>
     <div id="root"></div>
